terraform/google/compute/firewall/rdp_access_is_not_restricted.tf
# fails
# todo dont allow rdp access
resource "google_compute_firewall" "positive1" {
  name      = "test-firewall"
  network   = google_compute_network.default.name
  direction = "INGRESS"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["80", "8080", "1000-2000", "3389"]
  }

  source_tags   = ["web"]
  source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "positive2" {
  name    = "test-firewall"
  network = google_compute_network.default.name

  allow {
    protocol = "udp"
    ports    = ["80", "8080", "1000-2000", "21-3390"]
  }

  source_tags   = ["web"]
  source_ranges = ["::/0"]
}
